--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,25 +1,20 @@
 {% extends 'base.html' %}
-
 {% block content %}
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <h1 class="text-center my-4">Вход</h1>
-                <form method="post" action="{{ url_for('login') }}">
-                    {{ form.hidden_tag() }}
-                    <div class="form-group">
-                        {{ form.username.label(class="form-label") }}
-                        {{ form.username(class="form-control") }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.password.label(class="form-label") }}
-                        {{ form.password(class="form-control") }}
-                    </div>
-                    <div class="form-group text-center">
-                        {{ form.submit(class="btn btn-primary btn-block") }}
-                    </div>
-                </form>
-            </div>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">Вход</h1>
+    <form method="post" action="{{ url_for('login')}}">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            {{ form.username.label(class="form-label") }}
+            {{ form.username(class="form-control") }}
         </div>
-    </div>
+        <div class="form-group">
+            {{ form.password.label(class="form-label") }}
+            {{ form.password(class="form-control") }}
+        </div>
+        <div class="form-group text-center">
+            {{ form.submit(class="btn btn-primary btn-lg") }}
+        </div>
+    </form>
+</div>
 {% endblock %}
